# DevOpporunity

./: README.md
BackEnd/: main.py  pyproject.toml
BackEnd/alembic/: env.py
BackEnd/alembic/versions/: 2024_07_17_1549-48b443a900ae_create_mvp_database.py  2024_07_17_1605-540d05d82dae_create_mvp_database.py  2024_07_22_1315-b3a5c9c20445_temp.py  2024_07_22_1441-c9aea1f62eaf_test.py  2024_07_22_1454-163254381cbb_none_values.py  2024_07_24_1234-f1d73cfba1ae_vacancy_time_2.py  2024_07_24_1236-d9a32f411328_none_values_2.py  2024_07_24_1240-ddbfff7d7628_vacancy_id.py  2024_07_24_1258-88b19a157c44_default_disappearance.py  2024_07_24_1304-6a4083d42921_nullable_date_disappearance.py  2024_07_24_1305-143253537f77_nullable_city.py
BackEnd/api_v1/analytics/: analytics_functions.py  crud.py  dependencies.py  schemas.py  views.py
BackEnd/api_v1/stats_download/: crud.py  currency.py  dependencies.py  hhru_api.py  schemas.py  views.py
BackEnd/core/: config.py
BackEnd/core/models/: __init__.py  city.py  db_helper.py  favorite_filters.py  mixins.py  temp_vacancies.py  user.py  vacancy.py
