[tool.poetry]
name = "devopporunity"
version = "0.1.0"
description = ""
authors = ["Gorlov Andrey <a.b.gorlov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"
requests = "^2.32.3"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
